# eztrans-rs

./: Cargo.toml  readme.md
.cargo/: config.toml
examples/: interactive_cli.rs  proxy.rs  simple_translate.rs  translate_csv.rs
eztrans_dll/Dat/: JisKJ.da
eztrans_dll/ETC/: Ehnd 사용자 사전 부분 정리.txt  Ehnd_ChangeLog.txt  Ehnd_ReadMe.txt
eztrans_dll/Ehnd/: PreFilter_@A.txt  UserDict_@A#1.txt  ehnd_conf.ini
scripts/: analyze_ranges.py  convert_to_match_u32.py  default_translate_detection.csv  extract_fullwidth_to_halfwidth.py  extract_non_fullwidth_conversions.py  extract_unicode_ranges.py  eztrans_translation_results.csv  filter_ranges.py  filtered_rust_ranges.txt  full_unicode_scan_v3_results.txt  fullwidth_to_halfwidth_conversions.csv  generate_char_ranges.py  generate_rust_matches.py  japanese_non_korean_translations.csv  matched_unicode_ranges.txt  non_fullwidth_conversions.csv  parse_rust_ranges.py  parsed_rust_ranges.txt  rust_match_u32.txt  safe_chars_function.rs  safe_chars_matches.txt  safe_chars_range.txt  safe_chars_translations.csv  update_char_ranges.py
src/: char_ranges.rs  error.rs  ipc_protocol.rs  lib.rs  server.rs
tests/: MULTIPROCESS_GUIDE.md  analyze_ranges.rs  char_optimization.rs  char_range_discovery.rs  char_test.rs  default_translate_detection_test.rs  engine_tests.rs  error_tests.rs  full_unicode_scan.rs  generate_optimized_code.rs  ipc_protocol_tests.rs  japanese_translation_test.rs  multiprocess_test.rs  safe_chars_translation_test.rs  shared_memory_tests.rs  show_corruption.rs  test.rs  thread_local_test.rs  thread_safety_test.rs  verify_scan_results.rs
