[package]
name = "eztrans-rs"
version = "0.2.0"
edition = "2024"
authors = ["gembleman"]
license = "MIT"
description = "FFI bindings and IPC server for ChangShinSoft's Eztrans software"
repository = "https://github.com/gembleman/eztrans-rs.git"
keywords = ["windows", "translation", "eztrans"]
exclude = ["eztrans_dll/", "scripts/"]

[dependencies]
thiserror = "2.0"
windows = { version = "0.62.2", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }
encoding_rs = "0.8"

[dev-dependencies]
serial_test = "3.3"
num_cpus = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"
windows_shared_memory = "0.1.5"
